--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 .navbar-expand-lg {
@@ -69,6 +69,13 @@ body {
 .text-center{
     margin: auto;
     width: 50%;
+    padding: 10px;
+}
+
+.details-amazon-link {
+    display:block;
+    max-width: 20%;
+    margin:auto;
     padding: 10px;
 }
 
