--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     overflow-x: hidden;
 }
 
+
 .navbar-expand-lg {
     position: fixed;
     width: 100vw;
@@ -110,4 +111,40 @@ body {
 .amazon-default {
     position: relative;
     left: 22vw;
+}
+
+
+.stretch {
+    margin: auto;
+    width: 100%;
+    padding: 10px;
+    
+}
+  .homepage {
+      color: whitesmoke;
+      background-color: lightblue;
+    background-blend-mode: darken;
+    font-weight: bold;
+    background-repeat: no-repeat;
+    background-size:100% 100%;
+    height: 90vh;
+  }
+
+  .boxed{
+      margin: auto;
+      border: 2px solid black;
+      background-color:#9146FF;
+      width: 50%;
+      padding-bottom: 10px;
+  }
+
+
+  .logo {
+    width: 10%;
+    height: 80px;
+  }
+
+.space{
+    position: relative;
+    top: 50px;
 }
